[package]
name = "aoide-core"
version = "0.0.1"
authors = [ "Uwe Klotz <uwe.klotz@gmail>" ]
description = "Backend services for curating and enjoying your music"
publish = false

[dependencies]
base64 = "*"
chrono = { version = "*", features = ["serde"] }
failure = "*"
log = "*"
mime = "*"
rand = "*"
ring = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
mime_guess = "*"
