[package]
name = "aoide-core"
version = "0.0.1"
authors = [ "Uwe Klotz <uwe.klotz@gmail>" ]
license = "AGPL-3.0"
publish = false

[dependencies]
base64 = "*"
chrono = { version = "*", features = ["serde"] }
failure = "*"
log = "*"
mime = "*"
rand = "*"
ring = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
mime_guess = "*"
