[package]
name = "aoide-core"
version = "0.0.1"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
base64 = "*"
chrono = { version = "*", features = ["serde"] }
failure = "*"
log = "*"
mime = "*"
rand = "*"
# TODO: Update version after 3rd party crates have been updated
ring = "0.12.*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
mime_guess = "*"
