[package]
name = "aoide-storage"
version = "0.0.1"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
aoide-core = { version = "*", path = "../aoide-core" }

base64 = "*"
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["chrono", "sqlite"] }
failure = "*"
log = "*"
mime = "*"
percent-encoding = "*"
rand = "*"
rmp-serde = "*"
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
serde_json = "*"

[dev-dependencies]
diesel_migrations =  { version = "*", features = ["sqlite"] }
