[package]
name = "aoide-client"
version = "0.0.0"
edition = "2018"

[dependencies]
aoide-core = "*"
aoide-core-serde = "*"

anyhow = "*"
bytes = "*"
env_logger = "*"
reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "*"
tokio = { version = "*", default-features = false }
tracing = { version = "*", features = ["log"] }

[dev-dependencies]
clap = "*"
tokio = { version = "*", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
