[package]
name = "aoide-client"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "*"
bytes = "*"
env_logger = { version = ">=0.9" }
reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "*"
tokio = { version = "*", default-features = false }
tracing = { version = "*", features = ["log"] }

# Workspace dependencies
aoide-core = "*"
aoide-core-serde = "*"
aoide-core-ext = "*"
aoide-core-ext-serde = "*"

[dev-dependencies]
clap = "*"
tokio = { version = "*", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
