[package]
name = "aoide-core-ext-serde"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
#anyhow = "*"
#base64 = "*"
#chrono = { version = "*", features = ["serde"] }
#num-traits = "*"
#schemars = { version = "*", features = ["chrono"] }
#semval = "*"
serde = { version = "*", features = ["derive"] }
#serde_repr = "*"
url = { version = "*", features = ["serde"] }

# Workspace dependencies
aoide-core = "*"
aoide-core-serde = "*"
aoide-core-ext = "*"

[features]
default = []
