[package]
name = "aoide-core-ext-serde"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
url = { version = "*", features = ["serde"] }

# Workspace dependencies
aoide-core = "*"
aoide-core-serde = "*"
aoide-core-ext = "*"

[features]
default = []
