[package]
name = "aoide-core-serde"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
chrono = { version = "*", features = ["serde"] }
semval = "*"
serde = { version = "*", features = ["derive"] }
serde_repr = "*"

[features]
default = []
experimental-bnk-markers = ["aoide-core/experimental-bnk-markers"]

[dev-dependencies]
serde_json = "*"
