[package]
name = "aoide-core-serde"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
base64 = "*"
chrono = { version = "*", features = ["serde"] }
schemars = { version = "*", features = ["chrono"] }
semval = "*"
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
url = { version = "*", features = ["serde"] }

[features]
default = []

[dev-dependencies]
serde_json = "*"
