[package]
name = "aoide-core-serde"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2021"

[dependencies]
anyhow = "*"
base64 = "*"
chrono = { version = "*", default-features = false, features = ["serde"] }
num-traits = "*"
schemars = { version = "*", features = ["chrono"] }
semval = "*"
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
url = { version = "*", features = ["serde"] }

# Workspace dependencies
aoide-core = "*"

[features]
default = []

[dev-dependencies]
serde_json = "*"
