[package]
name = "aoide-core"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
bs58 = "*"
bitflags = "*"
chrono = "*"
lazy_static = "*"
num-traits = "*"
rand = "*"
semval = "*"

[features]
default = []
experimental-bnk-markers = []

[dev-dependencies]
criterion = "*"
uuid = { version = "*", features = ["v4"] }

[[bench]]
name = "entity_uid_benchmark"
harness = false
