[package]
name = "aoide-core"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
anyhow = "*"
bs58 = "^0.4"
bitflags = "*"
chrono = "*"
lazy_static = "*"
num-derive = "*"
num-traits = "*"
path-slash = "*"
rand = "*"
semval = "*"
thiserror = "*"
url = "*"

[features]
default = []

[dev-dependencies]
criterion = "*"
uuid = { version = "*", features = ["v4"] }

[[bench]]
name = "entity_uid_benchmark"
harness = false
