# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-demo-app"
description = "aoide - Desktop demo application"
keywords = ["music", "collection"]
publish = false
version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.80"
directories = "5.0.1"
discro = "0.29.1"
itertools = "0.12.1"
pretty_env_logger = "0.5.0"

[dependencies.aoide]
path = ".."
features = ["desktop-app", "async-file-dialog", "sqlite-bundled"]

[dependencies.log]
version = "0.4.20"
features = ["release_max_level_debug"]

[dependencies.tokio]
version = "1.36.0"
default-features = false
features = ["macros", "rt-multi-thread"]

[dependencies.eframe]
version = "0.26.2"
default-features = false
features = ["default_fonts", "glow"]

[dependencies.egui]
version = "0.26.2"
default-features = false
