# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-file-collection-app"
description = "aoide - File collection application"
publish = false
version = { workspace = true }
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
discro.workspace = true
itertools.workspace = true
env_logger.workspace = true
serde_json.workspace = true
url.workspace = true

[dependencies.aoide]
path = ".."
features = ["desktop-app", "async-file-dialog", "json-frontend", "sqlite-bundled"]

[dependencies.clap]
version = "4.5.57"
optional = true
features = ["derive"]

[dependencies.log]
workspace = true
features = ["release_max_level_debug"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dependencies.eframe]
version = "0.33.3"
default-features = false
features = ["default_fonts", "glow", "wayland"]

[dependencies.egui]
version = "0.33.3"
default-features = false

# mimalloc
[dependencies.mimalloc]
version = "0.1.48"
optional = true
# No default features, i.e. all features are optional.

[features]
default = ["cli"]
cli = ["aoide/json-backend", "dep:clap"]
# Use mimalloc instead of the default allocator.
# libmusl build of mimalloc is currently broken:
# <https://github.com/purpleprotocol/mimalloc_rust/issues/133>
mimalloc = ["dep:mimalloc"]
