[package]
name = "aoide-media"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
aoide-core-serde = "*"

anyhow = "*"
base64 = "*"
blake3 = "*"
bitflags = "*"
bytes = "*"
chrono = "*"
digest = "*"
image = "*"
log = "*"
mime = "*"
mime_guess = "*"
nom = "*"
semval = "*"
serde_json = "*"
sha2 = "*"
thiserror = "*"
url = "*"
walkdir = "*"

hound = { version = "*", optional = true }
id3 = { version = "*", optional = true }
lewton = { version = "*", optional = true }
metaflac = { version = "*", optional = true }
minimp3 = { version = "*", optional = true }
mp4ameta = { version = "*", optional = true }

[features]
fmt-flac = [ "metaflac" ]
fmt-mp4 = [ "mp4ameta" ]
fmt-mp3 = [ "id3", "minimp3" ]
fmt-ogg = [ "lewton" ]
fmt-wav = [ "hound" ]
default = [ "fmt-flac", "fmt-mp3", "fmt-mp4", "fmt-ogg", "fmt-wav" ]
