[package]
name = "aoide-media"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
aoide-core-serde = "*"

anyhow = "*"
base64 = "*"
blake3 = { version = "*", features = ["traits-preview"] }
bitflags = "*"
bytes = "*"
chrono = "*"
digest = "*"
image = "*"
log = "*"
mime = "*"
mime_guess = "*"
nom = "*"
num-traits = "*"
path-slash = "*"
semval = "*"
serde_json = "*"
sha2 = "*"
thiserror = "*"
triseratops = "*"
url = "*"
walkdir = "*"

id3 = { version = ">=0.6", optional = true }
lewton = { version = "*", optional = true }
metaflac = { version = "*", optional = true }
mp3-duration = { version = "*", optional = true }
mp4ameta = { version = ">=0.11", optional = true }

[features]
# TODO: Add support for AIFF files
fmt-aiff = []
fmt-flac = [ "metaflac" ]
fmt-mp4 = [ "mp4ameta" ]
fmt-mp3 = [ "id3", "mp3-duration" ]
fmt-ogg = [ "lewton", "metaflac" ] # metaflac for decoding FLAC picture blocks
# TODO: Add support for WAV files
fmt-wav = []
default = [ "fmt-aiff", "fmt-flac", "fmt-mp3", "fmt-mp4", "fmt-ogg", "fmt-wav" ]
