[package]
name = "aoide-repo-sqlite"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
aoide-repo = "*"
anyhow = "*"
bigdecimal = "*"
diesel = { version = "*", features = ["sqlite", "64-column-tables", "numeric", "chrono"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
log = "*"
num-bigint = "*"
num-derive = "*"
num-traits = "*"
semval = "*"

[features]
default = []

[dev-dependencies]
diesel_migrations =  { version = "*", features = ["sqlite"] }
