[package]
name = "aoide-repo-sqlite"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
aoide-repo = "*"
anyhow = "*"
bigdecimal = "*"
diesel = { version = "*", features = ["sqlite", "64-column-tables", "numeric", "chrono"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
num-bigint = "*"
num-derive = "*"
num-traits = "*"
semval = "*"
tracing = { version = "*", features = ["log"] }
url = "*"

[features]
default = []

[dev-dependencies]
diesel_migrations =  { version = "*", features = ["sqlite"] }
env_logger = { version = ">=0.9" }
test-env-log = "*"
