[package]
name = "aoide-repo"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
anyhow = "*"
num-derive = "*"
num-traits = "*"
paste = "*"
rand = "*"
semval = "*"
thiserror = "*"

# Workspace dependencies
aoide-core = "*"
aoide-core-ext = "*"

[features]
default = []
