[package]
name = "aoide-serde"
version = "0.0.9"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
semval = "*"
serde = { version = "*", features = ["derive"] }
serde_repr = "*"

[dev-dependencies]
serde_json = "*"
