[package]
name = "aoide-storage"
version = "0.0.9"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["chrono", "sqlite"] }
failure = "*"
log = "*"
mime = "*"
percent-encoding = "*"
rand = "*"
rmp-serde = "*"
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
serde_json = "*"
validator = "*"

[dev-dependencies]
diesel_migrations =  { version = "*", features = ["sqlite"] }
