[package]
name = "aoide-usecases"
version = "0.0.0"
authors = [ "Uwe Klotz <uwe.klotz@gmail>", "et al." ]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
aoide-core = "*"
aoide-media = "*"
aoide-repo = "*"
anyhow = "*"
blake3 = "*"
digest = "*"
bitflags = "*"
log = "*"
thiserror = "*"
url = "*"

[features]
default = []
