[package]
name = "aoide-usecases"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]
anyhow = "*"
blake3 = "*"
digest = "*"
bitflags = "*"
thiserror = "*"
tracing = { version = "*", features = ["log"] }
url = "*"

# Workspace dependencies
aoide-core = "*"
aoide-core-ext = "*"
aoide-media = "*"
aoide-repo = "*"

[features]
default = []
